--- a/discovery-server.yml
+++ b/discovery-server.yml
@@ -2,6 +2,11 @@ server:
   port: 8761
 
 eureka:
+  instance:
+    hostname: localhost
+  # standalone mode
   client:
-    register-with-eureka: false
-    fetch-registry: false
+    registerWithEureka: false
+    fetchRegistry: false
+    serviceUrl:
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/lse
