--- a/covid-global-service.yml
+++ b/covid-global-service.yml
@@ -1,6 +1,22 @@
-server:
-  port: 8084
+spring:
+  profiles: default
+eureka:
+  instance:
+    # enable to register multiple app instances with a random server port
+    instance-id: ${spring.application.name}:${random.uuid}
 
+---
+spring:
+  profiles: docker
+  zipkin:
+    baseUrl: http://tracing-server:9411
+server:
+  port: 8081
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://discovery-server:8761/eureka/
+---
 spring:
   jpa:
     show-sql: true
